tool: api: compare class state through computed checksum; csutil: use a new way to computing checksum, supporting containers and jdk classes and implement using stack instead of recursion to avoid stackoverflow. (bump verison to 0.83.0)